--- a/app/views/search/index.html.haml
+++ b/app/views/search/index.html.haml
@@ -1,5 +1,5 @@
 .container
   %h1 flickBOT
   = form_tag search_path, :method => :get, :class => 'form-inline' do
-    %input#search-box.form-control{:type => "search", :required => true}
+    %input#search-box.form-control{:type => "search", :required => true, :name => "text"}
     %button.btn.btn-primary{:title => "search"} Search
