--- a/app/views/search/search.html.haml
+++ b/app/views/search/search.html.haml
@@ -1,3 +1,6 @@
 %h1 Search#search
-%p Find me in app/views/search/search.html.haml
 
+.container{style: "-webkit-column-count: 3; -webkit-column-gap: 0"}
+  - @search_result.photos.each do |photo|
+    %img.flickr-photo{src: photo.url, style: "width: 100%"}
+}
