--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,6 +1,28 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+html, body {
+  height: 100%;
+}
+
+#landing-bg-img {
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background: image-url("bagan.jpg") no-repeat fixed;
+  position: fixed;
+  z-index: -100;
+  box-shadow: inset 0 0 0 1000px rgba(0,0,0,.3);
+}
+
+#form-wrapper {
+  min-height: 100%;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  text-align: center;
+}
+
 .container#photos {
   column-count: 3;
   column-gap: 0;
