--- a/app/views/search/search.html.haml
+++ b/app/views/search/search.html.haml
@@ -2,7 +2,7 @@
 
 .container#photos
   - @search_result.photos.each do |photo|
-    %img.flickr-photo{src: photo.thumbnail_url, style: "width: 100%", data: { large: photo.large_url }}
+    %img.flickr-photo{src: image_path("loading_spinner.gif"), style: "width: 100%", data: { large: photo.large_url, echo: photo.thumbnail_url }}
 
   = link_to '<<', search_path(text: @search_result.text, page: @search_result.prev_page)
   = link_to '>>', search_path(text: @search_result.text, page: @search_result.next_page)
