--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,7 +12,7 @@ html, body {
   background: image-url("bagan.jpg") no-repeat fixed;
   position: fixed;
   z-index: -100;
-  box-shadow: inset 0 0 0 1000px rgba(0,0,0,.3);
+  box-shadow: inset 0 0 0 1000px rgba(255,255,255,.7);
 }
 
 #form-wrapper {
@@ -26,6 +26,7 @@ html, body {
 .container#photos {
   column-count: 3;
   column-gap: 0;
+  margin-top: 110px;
 }
 
 img.overlay {
@@ -46,5 +47,144 @@ div.overlay-container {
   width: 100%;
   height: 100%;
   position: fixed;
+  z-index: 5000;
   background-color: rgba(0, 0, 0, 0.7);
 }
+
+@import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);
+@import url(http://fonts.googleapis.com/css?family=Raleway:400,300,700);
+
+$callout-header-color: white;
+$callout-subheader-color: #c4c4c4;
+
+html{
+ height:100%;
+ min-height:100%;
+}
+body {
+  font: 300 15px/1.6 'Raleway', serif, sans-serif;
+  color: #545454;
+  background: no-repeat center center fixed;
+  background-size: cover;
+  background-image: image-url('cover_1400c.jpg');
+  min-height: 100%;
+}
+
+.room {
+  height: 500px;
+}
+/* ---------------------------------------------- /*
+ * Typography
+/* ---------------------------------------------- */
+
+h1, h2, h3, h4, h5, h6 {
+  font: 400 46px/1.2 'Montserrat', serif, sans-serif;
+  margin: 5px 0 5px;
+  color: #222;
+}
+
+h1 {
+  font-size: 64px;
+  font-weight: 700;
+  margin: 5px 0 15px;
+}
+
+h2 {
+  font-size: 40px;
+  font-weight: 700;
+}
+
+h3 {
+  font-size: 22px;
+  text-transform: uppercase;
+  margin: 5px 0 15px;
+}
+
+h4 {
+  font-size: 16px;
+  margin: 5px 0 10px;
+}
+
+h5 {
+  font-size: 14px;
+}
+
+h6 {
+  font-size: 13px;
+}
+
+
+/* ---------------------------------------------- /*
+ * Navigation
+/* ---------------------------------------------- */
+
+.navbar {
+  background: none;
+  border-radius: 0;
+  border: 0;
+  padding: 20px 0;
+  text-transform: uppercase;
+  color: #000 !important;
+  transition: all 0.125s ease-in-out 0s;
+}
+
+.navbar-custom .nav li a:hover,
+.navbar-custom .nav li a:focus,
+.navbar-custom .nav li.active {
+  background: none;
+  outline: 0;
+  color: #EF4836;
+}
+
+.navbar-custom .navbar-brand {
+  font: 700 18px/1.2 'Montserrat', serif, sans-serif;
+  color: #000;
+}
+
+.navbar-custom .navbar-nav > li.active {
+  border-bottom: 3px solid #FFF;
+}
+
+.navbar-custom .navbar-toggle .icon-bar {
+  background: #FFF;
+}
+
+.navbar-custom .navbar-nav > li > a,
+.navbar-custom .navbar-nav .dropdown-menu > li > a {
+  color: #000;
+  font-size: 12px;
+}
+
+.navbar-color,
+.custom-collapse {
+  background: #FFF;
+  box-shadow: 0 0 4px rgba(0, 0, 0, .2);
+  padding: 0;
+}
+
+.navbar-color .navbar-brand,
+.custom-collapse .navbar-brand,
+.navbar-color .navbar-nav > li > a,
+.navbar-color .navbar-nav .dropdown-menu > li > a,
+.custom-collapse .navbar-nav > li > a,
+.custom-collapse .navbar-nav .dropdown-menu > li > a {
+  color: #222;
+}
+
+.navbar-color .navbar-nav > li.active {
+  border-bottom: 3px solid #222;
+}
+
+.custom-collapse .navbar-nav {
+  text-align: left;
+}
+
+.custom-collapse .navbar-nav > li.active {
+  border: 0;
+}
+
+.navbar-color .navbar-toggle .icon-bar,
+.custom-collapse .navbar-toggle .icon-bar {
+  background: #222;
+}
+
