--- a/app/views/common/_header.html.haml
+++ b/app/views/common/_header.html.haml
@@ -6,7 +6,7 @@
         %span.icon-bar
         %span.icon-bar
         %span.icon-bar
-      %a.navbar-brand{:href => "#intro"} Flicksearch
+      %a.navbar-brand{:href => root_path} Flicksearch
     #nabvar-options.collapse.navbar-collapse
       %ul.nav.navbar-nav.navbar-right
         %li
