--- a/app/views/search/index.html.haml
+++ b/app/views/search/index.html.haml
@@ -5,5 +5,5 @@
       .input-group
         %input#search-box.form-control{:type => "search", :required => true, :name => "text", :placeholder => "Type your search..."}
           .input-group-btn
-            %button.btn.btn-default{:type => "submit"}
+            %button.btn.btn-default#search-btn{:type => "submit"}
               %i.glyphicon.glyphicon-search
