--- a/app/views/common/_header.html.haml
+++ b/app/views/common/_header.html.haml
@@ -8,7 +8,7 @@
         %span.icon-bar
       %a.navbar-brand{:href => root_path} Flicksearch
     #nabvar-options.collapse.navbar-collapse
-      %ul.nav.navbar-nav.navbar-right
+      %ul.nav.navbar-nav.pull-right
         %li
           = form_tag search_path, :method => :get, :class => 'navbar-form', :role => 'search' do
             .input-group
